test/reader/tglyph/error/section/no-space-after-symbol.tglyph
▮Section Lv.1

It is not illegal but it is not recognized as section.

▮ Section Lv.1

Text text.
